# erlls

./: .gitignore  .uribo  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
erlls_core/: Cargo.toml  README.md
erlls_core/src/: completion_provider.rs  config.rs  definition_provider.rs  document.rs  error.rs  formatting_provider.rs  fs.rs  header.rs  hover_provider.rs  lib.rs  message.rs  push_diagnostics_provider.rs  semantic_tokens_provider.rs  server.rs  syntax_tree.rs
erlls_wasm/: Cargo.toml
erlls_wasm/src/: lib.rs
erllsweb/: .gitignore  README.md  package-lock.json  package.json
erllsweb/src/web/: extension.ts  server.ts
src/: definition_provider.rs  document.rs  error.rs  header.rs  lib.rs  main.rs  message.rs  rename_handler.rs  server.rs  syntax_tree.rs
vscode/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode/src/: extension.ts  server.ts
vscode/src/web/: extension.ts  server.ts
