[package]
name = "erlls"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Erlang language server"
homepage = "https://github.com/sile/erlls"
repository = "https://github.com/sile/erlls"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erlls_core = { version = "0.0.1", path = "erlls_core/" }
env_logger = "0.10.0"
log = { version = "0.4.19", features = ["release_max_level_debug"] }
orfail = { version = "0.1.3", features = ["serde"] }

[workspace]
members = ["erlls_core", "erlls_wasm"]
