[package]
name = "erlls"
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Erlang language server"
homepage = "https://github.com/sile/erlls"
repository = "https://github.com/sile/erlls"
readme = "README.md"
exclude = ["/vscode/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erlls_core = { version = "0.0", path = "erlls_core/" }
env_logger = "0.11"
log = { version = "0.4.19", features = ["release_max_level_debug"] }
orfail = { version = "1", features = ["serde"] }
futures = { version = "0.3.28", features = ["executor"] }

[workspace]
members = ["erlls_core", "erlls_wasm"]
