[package]
name = "erlls_core"
version = "0.0.26"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Core library for erlls crate"
homepage = "https://github.com/sile/erlls"
repository = "https://github.com/sile/erlls"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efmt_core = "0.5"
erl_tokenize = "0.8"
log = { version = "0.4.19", features = ["release_max_level_debug"] }
orfail = { version = "1", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.100"
url = { version = "2.4.0", features = ["serde"] }
