[package]
name = "erlls_wasm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
erlls_core = { path = "../erlls_core/" }
orfail = "0.1.3"
serde_json = "1.0.104"
